--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <nav>
       <ul>
-        <li class="current"><a href="index.html">Discription</a></li>
-        <li><a href="about.html">Testimonial</a></li>
+        <li class="current"><a href="index.html">about</a></li>
+        <li><a href="about.html">contact</a></li>
         <li><a href="services.html">Mailing List</a></li>
       </ul>
     </nav>
