--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <nav>
       <ul>
-        <li class="current"><a href="index.html">about</a></li>
-        <li><a href="about.html">contact</a></li>
-        <li><a href="services.html">Mailing List</a></li>
+        <li class="current"><a href="#">about</a></li>
+        <li><a href="#">contact</a></li>
+        <li><a href="#">Mailing List</a></li>
       </ul>
     </nav>
   </div>
