added back ground img

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       </nav>
     </div>
   </header>
-  <h1>Hello World</h1>
-  <h2>hi</h2>
-  <h3>hi</h3>
-  <h4>hi</h4>
+<section>
+  <h1>hello</h1>
+</section>
 </body>
 
 </html>
