--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
       </nav>
     </div>
   </header>
-<section>
+<section id="home">
   <h1>faccia.designs</h1>
 </section>
+<section id="about">
+
+</section>
+<section id="contact">
+
+</section>
+<script src="../js/main.js"></script>
 </body>
 
 </html>
