--- a/index.html
+++ b/index.html
@@ -24,16 +24,44 @@
       </nav>
     </div>
   </header>
-<section id="home">
-  <h1>faccia.designs</h1>
-</section>
-<section id="about">
+  <section id="home">
+    <h1>faccia.designs</h1>
+  </section>
+  <section id="about">
 
-</section>
-<section id="contact">
+  </section>
+  <section id="contact">
+    <h2>open to all opportunities</h2>
+    <div class="container">
+      <div class="container2">
+        <form>
 
-</section>
-<script src="../js/main.js"></script>
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+          <label for="country">Country</label>
+          <select id="country" name="country">
+            <option value="australia">Australia</option>
+            <option value="canada">Canada</option>
+            <option value="usa">USA</option>
+          </select>
+
+          <label for="subject">Subject</label>
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+          <input type="submit" value="Submit">
+
+        </form>
+      </div>
+    </div>
+  </section>
+  <footer>
+      <p id="Copyright">Copyright &copy; 2018</p>
+    </footer>
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
