--- a/index.html
+++ b/index.html
@@ -28,14 +28,57 @@
     <h1>faccia.designs</h1>
   </section>
   <section id="about">
+    <div class="row">
+      <div class="column">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front card1">
 
+            </div>
+            <div class="flip-card-back">
+              <h3>John Doe</h3>
+              <p>Architect & Engineer</p>
+              <p>We love that guy</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="column">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front card2">
+
+            </div>
+            <div class="flip-card-back">
+              <h3>John Doe</h3>
+              <p>Architect & Engineer</p>
+              <p>We love that guy</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front card1">
+
+            </div>
+            <div class="flip-card-back">
+              <h3>John Doe</h3>
+              <p>Architect & Engineer</p>
+              <p>We love that guy</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <section id="contact">
     <h2>open to all opportunities</h2>
     <div class="container">
       <div class="container2">
         <form>
-
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
@@ -44,9 +87,9 @@
 
           <label for="country">Country</label>
           <select id="country" name="country">
-            <option value="australia">Australia</option>
+            <option value="United States">United States</option>
             <option value="canada">Canada</option>
-            <option value="usa">USA</option>
+            <option value="usa">Other</option>
           </select>
 
           <label for="subject">Subject</label>
@@ -59,8 +102,8 @@
     </div>
   </section>
   <footer>
-      <p id="Copyright">Copyright &copy; 2018</p>
-    </footer>
+    <p id="Copyright">Copyright &copy; 2018</p>
+  </footer>
   <script src="../js/main.js"></script>
 </body>
 
