--- a/index.html
+++ b/index.html
@@ -36,22 +36,20 @@
 
             </div>
             <div class="flip-card-back">
-              <h3>John Doe</h3>
+              <h3>Chad Wittman</h3>
               <p>Architect & Engineer</p>
               <p>We love that guy</p>
             </div>
           </div>
         </div>
-
       </div>
       <div class="column">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front card2">
-
             </div>
             <div class="flip-card-back">
-              <h3>John Doe</h3>
+              <h3>Chad Wittman</h3>
               <p>Architect & Engineer</p>
               <p>We love that guy</p>
             </div>
@@ -62,10 +60,9 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front card1">
-
             </div>
             <div class="flip-card-back">
-              <h3>John Doe</h3>
+              <h3>Chad Wittman</h3>
               <p>Architect & Engineer</p>
               <p>We love that guy</p>
             </div>
@@ -81,22 +78,17 @@
         <form>
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
           <label for="lname">Last Name</label>
           <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
           <label for="country">Country</label>
           <select id="country" name="country">
             <option value="United States">United States</option>
             <option value="canada">Canada</option>
-            <option value="usa">Other</option>
+            <option value="Other">Other</option>
           </select>
-
           <label for="subject">Subject</label>
           <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
           <input type="submit" value="Submit">
-
         </form>
       </div>
     </div>
