--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <nav>
         <ul>
-          <li class="current"><a href="#">about</a></li>
-          <li><a href="#">contact</a></li>
-          <li><a href="#">Mailing List</a></li>
+          <li class="current"><a href="#about">about</a></li>
+          <li><a href="#contact">contact</a></li>
+          <li><a href="#home">Mailing List</a></li>
         </ul>
       </nav>
     </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="flip-card-back">
               <h3>Chad Wittman</h3>
-              <p>Architect & Engineer</p>
+              <p>Framer & WebDesigner</p>
               <p>We love that guy</p>
             </div>
           </div>
@@ -50,7 +50,7 @@
             </div>
             <div class="flip-card-back">
               <h3>Chad Wittman</h3>
-              <p>Architect & Engineer</p>
+              <p>Framer & WebDesigner</p>
               <p>We love that guy</p>
             </div>
           </div>
@@ -63,7 +63,7 @@
             </div>
             <div class="flip-card-back">
               <h3>Chad Wittman</h3>
-              <p>Architect & Engineer</p>
+              <p>Framer & WebDesigner</p>
               <p>We love that guy</p>
             </div>
           </div>
