--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </div>
   </header>
   <section id="home">
-    <h1>faccia.designs</h1>
+    <div class="containerA">
+      <h1>faccia.designs</h1>
+    </div>
   </section>
   <section id="about">
     <div class="row">
