--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </select>
           <label for="subject">Subject</label>
           <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-          <input type="submit" value="Submit">
+          <input type="submit" href="#home" value="submit">
         </form>
       </div>
     </div>
